--- a/config.php.dist
+++ b/config.php.dist
@@ -1,9 +1,9 @@
 <?php
 
 //connnect bdd
-$host  = 'localhost';
-$bdd   = 'chekpseudo';
-$user  = 'root';
-$password =  '';
+$host  = 'PUThostname';
+$bdd   = 'putmabdd';
+$user  = 'putuser';
+$password =  'putpassword';
 
 $db = new pdo('mysql:hostname='.$host.';dbname='.$bdd, $user, $password);
